[gd_scene load_steps=10 format=3 uid="uid://buk4g4b5iq34l"]

[ext_resource type="Script" path="res://src/player_script.gd" id="1_bumg4"]
[ext_resource type="Texture2D" uid="uid://cckyjrbywe30r" path="res://assets/img/player/Octopodes Sprites.0001.png" id="2_psg1p"]
[ext_resource type="Texture2D" uid="uid://dgmopqene3y1o" path="res://assets/img/player/Octopodes Sprites.0004.png" id="3_6vcnt"]
[ext_resource type="Texture2D" uid="uid://uh87chlam1it" path="res://assets/img/player/Octopodes Sprites.0005.png" id="4_ludvy"]
[ext_resource type="Texture2D" uid="uid://dcglbf67xdp84" path="res://assets/img/player/Octopodes Sprites.0006.png" id="6_jodow"]

[sub_resource type="SpriteFrames" id="SpriteFrames_oxc6c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_psg1p")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6vcnt")
}, {
"duration": 1.0,
"texture": ExtResource("4_ludvy")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_giv1h"]
radius = 100.0

[sub_resource type="SpriteFrames" id="SpriteFrames_tkkat"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_jodow")
}],
"loop": true,
"name": &"hand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_jodow")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_petbq"]
radius = 52.2901

[node name="Player Scene" type="Node2D"]

[node name="PlayerRoot" type="Node2D" parent="."]
script = ExtResource("1_bumg4")

[node name="Player" type="CharacterBody2D" parent="PlayerRoot"]
collision_layer = 2

[node name="PlayerSprite" type="AnimatedSprite2D" parent="PlayerRoot/Player"]
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_oxc6c")
animation = &"idle"

[node name="PlayerHitbox" type="CollisionShape2D" parent="PlayerRoot/Player"]
shape = SubResource("CircleShape2D_giv1h")
debug_color = Color(1.8771e-06, 0.644204, 0.28585, 0.42)

[node name="Camera2D" type="Camera2D" parent="PlayerRoot/Player"]

[node name="Hand" type="CharacterBody2D" parent="PlayerRoot"]
collision_layer = 8

[node name="HandSprite" type="AnimatedSprite2D" parent="PlayerRoot/Hand"]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_tkkat")
animation = &"hand"

[node name="HandHitbox" type="CollisionShape2D" parent="PlayerRoot/Hand"]
position = Vector2(0, -0.5)
shape = SubResource("CircleShape2D_petbq")
one_way_collision_margin = 10.0
